--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "Tracker animeflv episodes",
-  "version": "1.0",
+  "version": "1.1.0",
   "description": "A Chrome extension to track episodes on anime flv",
   "permissions": ["storage", "tabs", "scripting"],
   "host_permissions": ["<all_urls>"],
@@ -13,7 +13,7 @@
     }
   ],
   "icons": {
-    "128": "briar.png"
+    "128": "af.png"
   },
   "action": {
     "default_popup": "popup.html"
